--- a/seo-meta-tags.html
+++ b/seo-meta-tags.html
@@ -1,138 +1,141 @@
- <!-- All In One SEO Pack for BlogSpot 2021 Edition By: https://www.wikipoka.com Starts Here -->
-<b:if cond='data:blog.pageType == &quot;index&quot;'>
-<title><data:blog.pageTitle/></title>
-<b:else/>
-<title><data:blog.pageName/> - <data:blog.title/></title>
+<!-- All In One SEO Pack For BlogSpot 2022 Edition By: https://wikipoka.com (Starts Here)-->
+<b:if cond='data:view.isMultipleItems'>
+  <!--[ Title ]-->
+  <b:if cond='data:view.isHomepage'>
+    <title><data:blog.title.escaped/></title>
+    <b:elseif cond='data:view.search.query'/>
+    <title><data:messages.search/>: <data:view.search.query/></title>
+    <b:elseif cond='data:view.search.label'/>
+    <title><data:blog.pageName.escaped/> - <data:blog.title.escaped/></title>
+    <b:elseif cond='data:view.isArchive'/>
+    <title>Blog archive in: <data:blog.pageName.escaped/></title>
+    <b:else/>
+    <title>Blog: <data:blog.title.escaped/></title>
+  </b:if>
+  <b:elseif cond='data:view.isError'/>
+  <title>Error 404: Not Found</title>
+  <b:else/>
+  <title><data:blog.pageName.escaped/> - <data:blog.title.escaped/></title>
 </b:if>
-<b:if cond='data:blog.metaDescription != &quot;&quot;'>
-<meta expr:content='data:blog.metaDescription' name='description'/>
+
+<!--[ Meta for browser ]-->
+<meta charset='UTF-8'/>
+<meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/>
+<meta content='IE=edge' http-equiv='X-UA-Compatible'/>
+
+<!--[ Link Canonical ]-->
+<link expr:href='data:blog.url.canonical' rel='canonical'/>
+
+<b:if cond='!data:view.isError'>
+  <!--[ Browser data, description and keyword ]-->
+  <b:if cond='data:blog.metaDescription'>
+    <meta expr:content='data:blog.metaDescription.escaped' name='description'/>
+    <b:elseif cond='data:view.isSingleItem'/>
+    <meta expr:content='data:post.snippet.escaped snippet { length: 147, links: false, linebreaks: false, ellipsis: false }' name='description'/>
+    <b:else />
+    <meta expr:content='data:blog.pageName.escaped ? data:blog.pageName.escaped : data:blog.title' name='description'/>
+  </b:if>
+  <meta expr:content='data:blog.title.escaped + &quot;, &quot; + data:blog.pageName.escaped + &quot;, KEYWORD1, KEYWORD2, KEYWORD3 &quot;' name='keywords'/>
+  <b:tag cond='data:view.isPost' expr:href='resizeImage(data:blog.postImageUrl, 0)' name='link' rel='image_src'/>
+
+  <!--[ Generator and rrs ]-->
+  <meta content='blogger' name='generator'/>
+  <data:blog.feedLinks/>
+
+  <!--[ Theme Color ]-->
+  <meta content='SITE_MAIN_COLOR' name='theme-color'/>
+  <meta content='SITE_MAIN_COLOR' name='msapplication-TileColor'/>
+  <meta content='SITE_MAIN_COLOR' name='msapplication-navbutton-color'/>
+  <meta content='SITE_MAIN_COLOR' name='apple-mobile-web-app-status-bar-style'/>
+  <meta content='yes' name='apple-mobile-web-app-capable'/>
+  
+  <!--[ Favicon ]-->
+  <link expr:href='data:blog.blogspotFaviconUrl' rel='apple-touch-icon' sizes='120x120' />
+  <link expr:href='data:blog.blogspotFaviconUrl' rel='apple-touch-icon' sizes='152x152' />
+  <link expr:href='data:blog.blogspotFaviconUrl' rel='icon' type='image/x-icon' />
+  <link expr:href='data:blog.blogspotFaviconUrl' rel='shortcut icon' type='image/x-icon' />
+
+  <!--[ Open graph ]-->
+  <meta expr:content='data:blog.pageName.escaped ? data:blog.pageName.escaped : data:blog.title.escaped' property='og:title'/>
+  <meta expr:content='data:blog.canonicalUrl' property='og:url'/>
+  <meta expr:content='data:blog.title.escaped' property='og:site_name'/>
+  <b:if cond='data:view.isMultipleItems'>
+    <meta content='website' property='og:type'/>
+    <b:if cond='data:blog.metaDescription'>
+      <meta expr:content='data:blog.metaDescription.escaped' property='og:description'/>
+      <b:else/>
+      <meta expr:content='data:blog.pageName.escaped ? data:blog.pageName.escaped : data:blog.title' property='og:description'/>
+    </b:if>
+    <b:else/>
+    <meta content='article' property='og:type'/>
+    <b:if cond='data:blog.metaDescription'>
+      <meta expr:content='data:blog.metaDescription.escaped' property='og:description'/>
+      <b:else/>
+      <meta expr:content='data:post.snippet.escaped snippet { length: 147, links: false, linebreaks: false, ellipsis: false }' property='og:description'/>
+    </b:if>
+  </b:if>
+  <meta expr:content='data:blog.pageName.escaped ? data:blog.pageName.escaped : data:blog.title.escaped' property='og:image:alt'/>
+  <b:if cond='data:blog.postImageUrl'>
+    <meta expr:content='resizeImage(data:blog.postImageUrl, 0)' property='og:image'/>
+    <b:else/>
+    <meta content='DEFAULT_OG_IMAGE_URL' property='og:image'/>
+  </b:if>
+
+  <!--[ Twitter Card ]-->
+  <meta expr:content='data:blog.pageName.escaped ? data:blog.pageName.escaped : data:blog.title.escaped' name='twitter:title'/>
+  <meta expr:content='data:blog.canonicalUrl' name='twitter:url'/>
+  <b:if cond='data:view.isMultipleItems'>
+    <b:if cond='data:blog.metaDescription'>
+      <meta expr:content='data:blog.metaDescription.escaped' name='twitter:description'/>
+      <b:else/>
+      <meta expr:content='data:blog.pageName.escaped ? data:blog.pageName.escaped : data:blog.title' name='twitter:description'/>
+    </b:if>
+    <b:else/>
+    <b:if cond='data:blog.metaDescription'>
+      <meta expr:content='data:blog.metaDescription.escaped' name='twitter:description'/>
+      <b:else/>
+      <meta expr:content='data:post.snippet.escaped snippet { length: 147, links: false, linebreaks: false, ellipsis: false }' name='twitter:description'/>
+    </b:if>
+  </b:if>
+  <meta content='summary_large_image' name='twitter:card'/>
+  <meta expr:content='data:blog.pageName.escaped ? data:blog.pageName.escaped : data:blog.title.escaped' name='twitter:image:alt'/>
+  <b:if cond='data:blog.postImageUrl'>
+    <meta expr:content='resizeImage(data:blog.postImageUrl, 0)' name='twitter:image:src'/>
+    <b:else />
+    <meta content='DEFAULT_OG_IMAGE_URL' name='twitter:image:src'/>
+  </b:if>
+  
+  <!--[ Site verification ]-->
+  <meta content='BING_VERIFICATION_CODE' name='msvalidate.01'/>
+  <meta content='ALEXA_VERIFICATION_CODE' name='alexaVerifyID'/>
+  <meta content='YANDEX_VERIFICATION_CODE' name='yandex-verification'/>
+  <meta content='GOOGLE_VERIFICATION_CODE' name='google-site-verification'/>
+  
+  <!--[ Site crawling ]-->
+  <meta content='global' name='distribution'/>
+  <meta content='1 days' name='revisit'/>
+  <meta content='1 days' name='revisit-after'/>
+  <meta content='document' name='resource-type'/>
+  <meta content='all' name='audience'/>
+  <meta content='general' name='rating'/>
+  <meta content='all' name='robots'/>
+  <meta content='en-us' name='language'/>
+  <meta content='USA' name='country'/>
+  
+  <!--[ Schema markup ]-->
+  <script type='application/ld+json'>
+  {
+    &quot;@context&quot;: &quot;https://schema.org&quot;,
+    &quot;@type&quot;: &quot;WebSite&quot;,
+    &quot;url&quot;: &quot;<data:blog.homepageUrl.canonical/>&quot;,
+    &quot;name&quot;: &quot;<data:blog.title/>&quot;,
+    &quot;alternateName&quot;: &quot;<data:blog.title/>&quot;,
+    &quot;potentialAction&quot;: {
+      &quot;@type&quot;: &quot;SearchAction&quot;,
+      &quot;target&quot;: &quot;<data:blog.homepageUrl.canonical/>search?q={search_term_string}&quot;,
+      &quot;query-input&quot;: &quot;required name=search_term_string&quot;
+    }
+  }
+  </script>
 </b:if>
-<b:if cond='data:blog.pageType == &quot;archive&quot;'>
-<meta content='noindex, nofollow' name='robots'/>
-<b:else/>
-<b:if cond='data:blog.pageType == &quot;index&quot;'>
-<b:if cond='data:blog.url == data:blog.homepageUrl'>
-<meta expr:content='data:blog.title' name='keywords'/>
-<meta content='index, follow' name='robots'/>
-</b:if>
-<b:else/>
-<b:if cond='data:blog.pageTitle != data:blog.title'>
-<meta expr:content='data:blog.pageName' name='keywords'/>
-</b:if>
-</b:if>
-<meta content='GOOGLE VERIFICATION CODE' name='google-site-verification'/>
-<meta content='BING VERIFICATION CODE' name='msvalidate.01'/>
-<meta content='ALEXA VERIFICATION CODE' name='alexaVerifyID'/>
-<meta content='YANDEX VERIFICATION CODE' name='yandex-verification'/>
-
-<meta content='global' name='distribution'/>
-<meta content='1 days' name='revisit'/>
-<meta content='1 days' name='revisit-after'/>
-<meta content='document' name='resource-type'/>
-<meta content='all' name='audience'/>
-<meta content='general' name='rating'/>
-<meta content='all' name='robots'/>
-<meta content='en-us' name='language'/>
-<meta content='USA' name='country'/>
-<meta content='YOUR FACEBOOK ID' property='fb:admins'/>
-<meta content='TWITTER USERNAME FOR YOUR BLOG' name='twitter:site'/>
-<meta content='YOUR TWITTER USERNAME' name='twitter:creator'/>
-
-<meta content='YOUR NAME' name='author'/>
-<meta content='YOUR EMAIL' name='email'/>
-
-<link href='' rel='author'/>
-<link href='' rel='publisher'/>
-</b:if>
-<!-- All In One SEO Pack for BlogSpot 2021 Edition By: https://www.wikipoka.com Ends Here -->
-
-
-<!-- 2020 SEO Pack for Blogger by www.wikipoka.com-->
-
-<b:include data='blog' name='all-head-content'/>
-
-<meta charset='utf-8'/>
-
-<meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'/>
-
-<meta content='blogger' name='generator'/>
-
-
-<meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
-
-<link href='http://www.blogger.com/openid-server.g' rel='openid.server'/>
-
-<link expr:href='data:blog.homepageUrl' rel='openid.delegate'/>
-
-<link expr:href='data:blog.url' rel='canonical'/>
-<b:if cond='data:blog.pageType == &quot;index&quot;'>
-<title><data:blog.pageTitle/></title>
-<b:else/>
-<b:if cond='data:blog.pageType != &quot;error_page&quot;'>
-<title><data:blog.pageName/> - <data:blog.title/></title>
-</b:if></b:if>
-<b:if cond='data:blog.pageType == &quot;error_page&quot;'>
-<title>Page Not Found - <data:blog.title/></title>
-</b:if>
-<b:if cond='data:blog.pageType == &quot;archive&quot;'>
-<meta content='noindex' name='robots'/>
-</b:if>
-<b:if cond='data:blog.searchLabel'>
-<meta content='noindex,nofollow' name='robots'/>
-</b:if>
-<b:if cond='data:blog.isMobile'>
-<meta content='noindex,nofollow' name='robots'/>
-</b:if>
-<b:if cond='data:blog.pageType != &quot;error_page&quot;'>
-<meta expr:content='data:blog.metaDescription' name='description'/>
-<b:if cond='data:blog.homepageUrl != data:blog.url'>
-<meta expr:content='data:blog.pageName + &quot;, &quot; + data:blog.pageTitle + &quot;, &quot; + data:blog.title' name='keywords'/>
-</b:if></b:if>
-<b:if cond='data:blog.url == data:blog.homepageUrl'>
-<meta content='YOUR, KEYWORDS, HERE' name='keywords'/></b:if>
-<link expr:href='data:blog.homepageUrl + &quot;feeds/posts/default&quot;' expr:title='data:blog.title + &quot; - Atom&quot;' rel='alternate' type='application/atom+xml'/>
-<link expr:href='data:blog.homepageUrl + &quot;feeds/posts/default?alt=rss&quot;' expr:title='data:blog.title + &quot; - RSS&quot;' rel='alternate' type='application/rss+xml'/>
-<link expr:href='&quot;http://www.blogger.com/feeds/&quot; + data:blog.blogId + &quot;/posts/default&quot;' expr:title='data:blog.title + &quot; - Atom&quot;' rel='alternate' type='application/atom+xml'/>
-<b:if cond='data:blog.pageType == &quot;item&quot;'>
-<b:if cond='data:blog.postImageThumbnailUrl'>
-<link expr:href='data:blog.postImageThumbnailUrl' rel='image_src'/>
-</b:if></b:if>
-<b:if cond='data:blog.url == data:blog.homepageUrl'>
-<b:if cond='data:blog.pageType == &quot;item&quot;'>
-<b:if cond='data:blog.pageType == &quot;static_page&quot;'>
-<b:if cond='data:blog.url'>
-<meta expr:content='data:blog.url' property='og:url'/>
-</b:if>
-<meta expr:content='data:blog.title' property='og:site_name'/>
-<b:if cond='data:blog.pageName'>
-<meta expr:content='data:blog.pageName' property='og:title'/>
-</b:if>
-<meta content='website' property='og:type'/></b:if></b:if></b:if>
-<b:if cond='data:blog.postImageThumbnailUrl'>
-<meta expr:content='data:blog.postImageThumbnailUrl' property='og:image'/>
-<b:else/></b:if>
-<link href='/favicon.ico' rel='icon' type='image/x-icon'/>
-<link href='https://plus.google.com/GOOGLE+ID/posts' rel='publisher'/>
-<link href='https://plus.google.com/GOOGLE+ID/about' rel='author'/>
-<link href='https://plus.google.com/GOOGLE+ID' rel='me'/>
-<meta content='GOOGLE-WEBMASTER-CODE' name='google-site-verification'/>
-<meta content='BING-WEBMASTER-CODE' name='msvalidate.01'/>
-<meta content='ALEXA-VERIFY-CODE' name='alexaVerifyID'/>
-<meta content='chicago, USA' name='geo.placename'/>
-<meta content='YOUR-NAME' name='Author'/>
-<meta content='general' name='rating'/>
-<meta content='USA' name='geo.country'/>
-<meta content='en_US' property='og:locale'/>
-<meta content='english' name='language'/>
-<meta content='https://www.facebook.com/USER_NAME' property='article:author'/>
-<meta content='https://www.facebook.com/PAGE_USER_NAME' property='article:publisher'/>
-<meta content='FACEBOOK-APP-ID' property='fb:app_id'/>
-<meta content='FACEBOOK-ADMIN-ID' property='fb:admins'/>
-<meta content='@geeksblogger' name='twitter:site'/>
-<meta content='@geeksblogger' name='twitter:creator'/>
-<meta content='all' name='robots'/>
-<meta content='index, follow' name='robots'/>
-<meta content='snippet' name='googlebot'/>
-<meta content='noodp' name='googlebot'/>
-<meta content='all' name='audience'/>
-<!-- End 2020 SEO Pack for Blogger by www.wikipoka.com -->
+<!-- All In One SEO Pack For BlogSpot 2022 Edition By: https://wikipoka.com (End Here)-->
